@@ -5,8 +5,10 @@ import javassist.ClassPool;
 
 /**
  * генерирация новых классов и загрузка их в Permgen
+ * использовать -XX:MaxPermSize=128m
  *
- * @Exception - java.lang.OutOfMemoryError
+ * @Exception - java.lang.OutOfMemoryError PermGen указывает на то,
+ * \что область постоянного поколения в памяти исчерпана
  */
 public class Permgen {
     static ClassPool classPool = ClassPool.getDefault();
